--- a/styles/style.css
+++ b/styles/style.css
@@ -64,3 +64,110 @@ body{
     width: 570px;
     font-size: 1.375rem;
 }
+.cart{
+    align-items: center;
+}
+/* card style */
+.cards{
+    margin-top: 120px;
+}
+.card{
+    max-width: 270px;
+    height: 485px;
+    text-align: center;
+   
+}
+.card-all{
+    margin-top: 49px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 30px;
+    column-gap: 10px;
+}
+.lily{
+    font-size: 1.375rem;
+    color: rgba(17, 17, 17, 1);
+}
+.lily-2{
+    font-weight: bold;
+    font-size: 1.375rem;
+
+}
+.card-btn{
+    width: 100%;
+   background-color: rgba(233, 90, 8, 1);
+   color: white;
+   font-weight: 600;
+   font-size: 1rem;
+   height: 50px;
+   margin-bottom: 20px;
+}
+.card-content{
+    text-align: center;
+}
+.card-title{
+    font-weight: bold;
+    font-size: 3.125rem;
+    margin-bottom: 16px;
+}
+.card-description{
+    font-size: 1.375rem;
+    margin: 0 126px;
+
+}
+
+
+
+
+
+
+
+
+
+/* media quary */
+@media screen and (max-width:576px) {
+    nav{
+        margin-left: 16px;
+        
+    }
+    .list{
+        visibility: hidden;
+    }
+    .banner{
+        flex-direction: column-reverse;
+        width: 100%;
+        margin-top: 28px;
+    }
+    .banner-content{
+        margin: 28px 16px;
+        margin-top: 28px;
+        
+    }
+    .card-all{
+        grid-template-columns: repeat(2, 1fr); 
+        margin-left: 14px;  
+    }
+    .card-title{
+        font-size: 24px;
+        /* margin-left: 200px; */
+    }
+    .card-description{
+        font-size: 14px;
+        /* width: 100%;
+        margin-right: 50px; */
+        
+    }
+    .card-content{
+        width: 576px;
+      
+        
+    }
+    .cards{
+        margin-top: 28px;
+        text-align: center;
+
+
+    }
+      
+    
+}
