--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,32 @@ body{
     margin: 0 126px;
 
 }
+/* flower section */
+.flower-section{
+    margin-top: 120px;
+    max-width: 1140px;
+    height: 597px;
+
+}
+.flower-content{
+    width: 540px;
+    height: 521px;
+    margin:38px 0 38px 60px;
+    
+}
+.flower-title{
+    font-weight: bold;
+    font-size: 3.125rem; 
+    
+}
+.flower-desc{
+    font-size: 1.375rem;
+    margin-bottom: 20px;
+   
+    
+}
+
+
 
 
 
@@ -168,6 +194,38 @@ body{
 
 
     }
-      
+    .flower{
+        flex-direction: column;
+        
+    }
+    .flower-img{
+        width: 555px;
+        margin-bottom: 20px;
+        margin-left: 12px; 
+        margin-right: 10px;  
+}
+
+.flower-content{
+    margin: 0px;
+
+}
+.flower-title{
+    margin-top: 10px;
+    font-size: 1.5rem;
+    margin-left: 17px;
     
+}
+.flower-desc{
+    /* margin-right: 10px; */
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+.flower-ul{
+    margin-top: 10px;
+}
+
+
+
+
+
 }
